hphp/test/zend/good/ext/zlib/tests/gzreadgzwrite.php.skipif
<?php # vim600:syn=php:
if (!extension_loaded("zlib")) print "skip"; ?>