hphp/test/zend/bad/tests/output/bug60282.php.skipif
<?php if (!extension_loaded("zlib")) print "skip Zlib extension required"; ?>